Style changes to make sure that looks right on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -107,8 +107,7 @@ h4 {
 
 .designer {
   position: relative;
-  width: 1000px;
-  height: 1000px;
+  margin-left: 10px;
   .body {
     position: absolute;
     left: 0;
